--- a/src/app/components/shared/user/user-list/user-list.component.html
+++ b/src/app/components/shared/user/user-list/user-list.component.html
@@ -14,7 +14,7 @@
                 </ng-template>
             </p-toolbar>
 
-            <p-table #dt [value]="(users$ | async)!" [columns]="cols" responsiveLayout="scroll" [rows]="10" [globalFilterFields]="['userName','email','firstName','lastName']" [rows]="10" [paginator]="true" [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [(selection)]="selectedUsers" selectionMode="multiple" [rowHover]="true" dataKey="id">
+            <p-table #dt [value]="users" [columns]="cols" responsiveLayout="scroll" [rows]="10" [globalFilterFields]="['userName','email','firstName','lastName']" [rows]="10" [paginator]="true" [rowsPerPageOptions]="[10,20,30]" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [(selection)]="selectedUsers" selectionMode="multiple" sortMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="caption">
                     <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
                         <h5 class="m-0">{{ 'user.user-management' | translate }}</h5>
@@ -31,11 +31,9 @@
                         </th>
                         <th pSortableColumn="userName">{{ 'user.user-name' | translate }} <p-sortIcon field="userName"></p-sortIcon></th>
                         <th pSortableColumn="email">{{ 'user.email' | translate }} <p-sortIcon field="email"></p-sortIcon></th>
-                        <th>test {{ 'user.image' | translate }}</th>
+                        <th pSortableColumn="image" style="text-align: center;">{{ 'user.image' | translate }}</th>
                         <th pSortableColumn="firstName">{{ 'user.first-name' | translate }} <p-sortIcon field="firstName"></p-sortIcon></th>
                         <th pSortableColumn="lastName">{{ 'user.last-name' | translate }} <p-sortIcon field="lastName"></p-sortIcon></th>
-                        <th pSortableColumn="dateOfBirth">{{ 'user.date-of-birth' | translate }} <p-sortIcon field="dateOfBirth"></p-sortIcon></th>
-                        <th pSortableColumn="gender">{{ 'user.gender' | translate }}<p-sortIcon field="gender"></p-sortIcon></th>
                         <!-- <th pSortableColumn="inventoryStatus">Status <p-sortIcon field="inventoryStatus"></p-sortIcon></th> -->
                         <th></th>
                     </tr>
@@ -52,11 +50,11 @@
                             <span class="p-column-title">{{ 'user.email' | translate }}</span>
                             {{user.email}}
                         </td>
-                        <td style="width:14%; min-width:10rem;"><span class="p-column-title">Image</span>
-                            <p-avatar image="{{user.image}}" shape="circle" size="large"></p-avatar>
+                        <td style="width:10%; min-width:5rem;text-align: center;"><span class="p-column-title">Image</span>
+                            <p-avatar image="{{user.imageSmall}}" shape="circle" size="large"></p-avatar>
                             <!-- <img [src]="'assets/images/user/default_user.png'" [alt]="user.userName" width="100" class="shadow-4" /> -->
                         </td>
-                        <td style="width:14%; min-width:8rem;">
+                        <td style="width:14%; min-width:10rem">
                             <span class="p-column-title">{{ 'user.first-name' | translate }}</span>
                             {{user.firstName}}
                         </td>
@@ -64,21 +62,8 @@
                             <span class="p-column-title">{{ 'user.last-name' | translate }}</span>
                             {{user.lastName}}
                         </td>
-                        <td style="width:14%; min-width: 10rem;"><span class="p-column-title">Date of birth</span>
-                            <span class="p-column-title">{{ 'user.date-of-birth' | translate }}</span>
-                            {{user.dateOfBirth | date:dateFormat}}
-                            <!-- <p-age [ngModel]="user.dateOfBirth"></p-age> -->
-                            <!-- [readonly]="true" [cancel]="false" -->
-                        </td>
-                        <!-- <td style="width:14%; min-width: 10rem;"><span class="p-column-title">Status</span>
-                            <span [class]="'user-badge status-' + (user.inventoryStatus ? user.inventoryStatus.toLowerCase() : '')">{{user.inventoryStatus}}</span>
-                        </td> -->
-                        <td style="width:14%; min-width:10rem;">
-                            <span class="p-column-title">{{ 'user.gender' | translate }}</span>
-                            {{user.gender}}
-                        </td>
                         <td>
-                            <div class="flex">
+                            <div class="flex justify-content-center">
                                 <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-sm p-button-success mr-2" (click)="editUser(user)"></button>
                                 <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-sm p-button-warning" (click)="deleteUser(user)"></button>
                             </div>
@@ -87,56 +72,6 @@
                 </ng-template>
             </p-table>
         </div>
-        <p-dialog [(visible)]="userDialog" [style]="{width: '450px'}" header="User Details" [modal]="true" class="p-fluid">
-            <ng-template pTemplate="content">
-                <img [src]="'assets/demo/images/avatar/profile.jpg/'" [alt]="user.image" width="150" class="mt-0 mx-auto mb-5 block shadow-2" *ngIf="user.image">
-                <div class="field">
-                    <label for="userName">User name</label>
-                    <input type="text" pInputText id="userName" [(ngModel)]="user.userName" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !user.userName}"/>
-                    <small class="ng-dirty ng-invalid" *ngIf="submitted && !user.userName">Name is required.</small>
-                </div>
-                <div class="field">
-                    <label for="email">Email</label>
-                    <input type="text" pInputText id="email" [(ngModel)]="user.email" required autofocus [ngClass]="{'ng-invalid ng-dirty' : submitted && !user.email}"/>
-                </div>
-                <div class="field">
-                    <label for="basic">Date of Birth</label>
-                    <p-calendar inputId="basic" [(ngModel)]="user.dateOfBirth" placeholder="Please select a date"  [showIcon]="true" ></p-calendar>
-                </div>
-                <div class="field">
-                    <label class="mb-3">Gender</label>
-                    <div class="formgrid grid">
-                        <div class="field-radiobutton col-6">
-                            <p-radioButton id="male" name="gender" value="male" [(ngModel)]="user.gender"></p-radioButton>
-                            <label for="male">{{ 'user.genders.male' | translate }}</label>
-                        </div>
-                        <div class="field-radiobutton col-6">
-                            <p-radioButton id="female" name="gender" value="female" [(ngModel)]="user.gender"></p-radioButton>
-                            <label for="female">{{ 'user.genders.female' | translate }}</label>
-                        </div>
-                        <div class="field-radiobutton col-6">
-                            <p-radioButton id="other" name="gender" value="other" [(ngModel)]="user.gender"></p-radioButton>
-                            <label for="others">{{ 'user.genders.other' | translate }}</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="formgrid grid">
-                    <div class="field col">
-                        <label for="firstName">{{ 'user.first-name' | translate }}</label>
-                        <input type="text" pInputText id="firstName" [(ngModel)]="user.firstName"/>
-                    </div>
-                    <div class="field col">
-                        <label for="lastName">{{ 'user.last-name' | translate }}</label>
-                        <input type="text" pInputText id="lastName" [(ngModel)]="user.lastName"/>
-                    </div>
-                </div>
-            </ng-template>
-
-            <ng-template pTemplate="footer">
-                <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
-                <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="saveUser()"></button>
-            </ng-template>
-        </p-dialog>
 
         <p-dialog [(visible)]="deleteUserDialog" header="Confirm" [modal]="true" [style]="{width:'450px'}">
             <div class="flex align-items-center justify-content-center">
