--- a/src/app/layout/app.layout.component.html
+++ b/src/app/layout/app.layout.component.html
@@ -5,6 +5,7 @@
     </div>
     <div class="layout-main-container">
         <div class="layout-main">
+            <p-toast></p-toast>
             <router-outlet></router-outlet>
         </div>
         <app-footer></app-footer>
