--- a/src/app/components/shared/image-upload/image-upload/image-upload.component.html
+++ b/src/app/components/shared/image-upload/image-upload/image-upload.component.html
@@ -8,31 +8,33 @@
                 class="user-image"
             />
             <div class="image-buttons">
-            <button
-             *ngIf="!imageBase64"
-                pButton
-                pRipple
-                type="button"
-                icon="pi pi-pencil"
-                class="p-button-rounded p-button-secondary"
-                (click)="fileInput.click()"
-            >
-                <input
-                    #fileInput
-                    type="file"
-                    (change)="onFileSelect($event)"
-                    style="display: none"
-                />
-            </button>
-            <button
-                *ngIf="imageBase64"
-                pButton
-                pRipple
-                icon="pi pi-times"
-                class="p-button-rounded p-button-secondary"
-                (click)="cancelSelection()"
-            ></button>
-        </div>
+                <div *ngIf="allowEditImage">
+                    <button
+                        *ngIf="!imageBase64"
+                        pButton
+                        pRipple
+                        type="button"
+                        icon="pi pi-pencil"
+                        class="p-button-rounded p-button-secondary"
+                        (click)="fileInput.click()"
+                    >
+                        <input
+                            #fileInput
+                            type="file"
+                            (change)="onFileSelect($event)"
+                            style="display: none"
+                        />
+                    </button>
+                    <button
+                        *ngIf="imageBase64"
+                        pButton
+                        pRipple
+                        icon="pi pi-times"
+                        class="p-button-rounded p-button-secondary"
+                        (click)="cancelSelection()"
+                    ></button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
